deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-base-deployment
  labels:
    app: base
spec:
  replicas: 1
  selector:
    matchLabels:
      app: base
  template:
    metadata:
      labels:
        app: base
    spec:
      containers:
        - name: base
          image: 694879447632.dkr.ecr.us-east-2.amazonaws.com/project:base
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-socket-deployment
  labels:
    app: socket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket
  template:
    metadata:
      labels:
        app: socket
    spec:
      containers:
        - name: socket
          image: 694879447632.dkr.ecr.us-east-2.amazonaws.com/project:socket
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
