deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-base-service
spec:
  type: NodePort
  selector:
    app: project-base
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: project-socket-service
spec:
  type: NodePort
  selector:
    app: minchat-socket
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
