deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  rules:
    - host: project.dirtservers.com
      http:
        paths:
          - path: /base
            pathType: Prefix
            backend:
              service:
                name: project-base-service
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project-socket-service
                port:
                  number: 4001
